# ROPE

./: .gitignore  CONTRIBUTING.md  PRD.md  README.md  pyproject.toml
.cursor/: guidelines.mdc
.cursor/plans/: rope_implementation_plan_bec6e74f.plan.md  rope_robustness_fixes_e5b00069.plan.md
.github/workflows/: ci.yml
data/: attacks.json  metadata.json  tasks.json
docs/: AUDIT.md  DEBUG.md
examples/: analysis.ipynb  colab_rope_demo.ipynb  colab_rope_full_eval.ipynb  custom_eval.ipynb  quickstart.ipynb
rope/: __init__.py  cli.py  defenses.py  eval.py  judge.py  metrics.py  models.py  validation.py
scripts/: fix_attacks.py  generate_attacks.py  generate_attacks_v2.py
tests/: test_all.py
